--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
         <div class="message right">Kamal: Hey how are you?</div>
         <div class="message left">Raman: I am Fine</div>
     </div>
+    <div class="send">
+        <form action="#" id="send-container">
+            <input type="text" name="messageInp" id="messageInp">
+            <button class="btn" type="submit">Send</button>
+        </form>
+    </div>
 </body>
 </html>
